package project;

/**
 * Basic enum to hold the elevator state.
 */
public enum ElevatorState {
	SLEEPING, MOVING, PROCESSING_RECEIVE, CLOSING_DOOR, OPENING_DOOR, MOVING_INTERMEDIATE, STUCK_DOOR, STUCK_ELEVATOR
}
